# twincart-product-matching

./: .dvcignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  dvc.yaml  lightning_logs.dvc  mlruns.dvc  models.dvc  plots.dvc  pyproject.toml
.dvc/: config
configs/: export.yaml  infer.yaml  serve.yaml  tensorrt.yaml  train.yaml
configs/data/: shopee.yaml
configs/logging/: mlflow.yaml
configs/loss/: multi_similarity.yaml
configs/loss/xbm/: xbm.yaml
configs/matching/: alpha_qe.yaml  knn.yaml  threshold.yaml
configs/model/: fusion_concat.yaml  image_efficientnet_b0_gem.yaml  image_nfnet_f0_gem.yaml  text_distilbert_id.yaml
configs/optim/: madgrad.yaml
configs/paths/: default.yaml
configs/sched/: cosine_anneal.yaml
configs/transforms/: shopee.yaml
scripts/: check_onnx.py
src/twincart/: commands.py
src/twincart/common/: git.py  paths.py  seed.py
src/twincart/data/: dataset_image.py  dataset_text.py  dvc_ops.py  folds.py  transforms.py
src/twincart/export/: cli.py  onnx_export.py  tensorrt_export.py
src/twincart/models/: image_encoder.py  pooling.py  text_encoder.py
src/twincart/serving/: build_mlflow.py  onnx_pyfunc.py
src/twincart/train/: callbacks.py  datamodule.py  lightning_module.py  losses.py  sampler_pairs.py
